<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <import type="org.oppia.android.app.player.audio.AudioViewModel.UiAudioPlayStatus" />

    <import type="android.view.View" />

    <variable
      name="audioFragment"
      type="org.oppia.android.app.player.audio.LanguageInterface" />

    <variable
      name="viewModel"
      type="org.oppia.android.app.player.audio.AudioViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="12dp"
    android:background="@drawable/audio_background"
    android:elevation="8dp"
    android:gravity="center_vertical"
    android:minHeight="48dp"
    android:padding="4dp">

    <ImageView
      android:id="@+id/play_pause_audio_icon"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_marginStart="8dp"
      android:clickable="@{viewModel.playStatusLiveData != UiAudioPlayStatus.LOADING}"
      android:contentDescription="@{viewModel.playStatusLiveData == UiAudioPlayStatus.PLAYING ? @string/audio_pause_description : @string/audio_play_description}"
      android:onClick="@{(v) -> viewModel.togglePlayPause(viewModel.playStatusLiveData)}"
      android:padding="8dp"
      android:src="@{viewModel.playStatusLiveData == UiAudioPlayStatus.PLAYING ? @drawable/ic_pause_circle_filled_white_24dp : @drawable/ic_play_circle_filled_white_24dp}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
      android:id="@+id/audio_progress_seek_bar"
      style="@style/AudioSeekBar"
      android:layout_width="0dp"
      android:layout_height="26dp"
      android:layout_marginStart="16dp"
      android:max="@{viewModel.durationLiveData}"
      android:maxHeight="4dp"
      android:minWidth="180dp"
      android:minHeight="4dp"
      android:progress="@{audioFragment.userIsSeeking ? audioFragment.userPosition : viewModel.positionLiveData}"
      android:progressDrawable="@drawable/audio_seekbar_background"
      android:splitTrack="false"
      android:thumb="@drawable/seekbar_thumb"
      android:thumbOffset="16dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/audio_language_icon"
      app:layout_constraintStart_toEndOf="@+id/play_pause_audio_icon"
      app:layout_constraintTop_toTopOf="parent" />

    <ImageView
      android:id="@+id/audio_language_icon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@{viewModel.currentLanguageCode}"
      android:gravity="center"
      android:minWidth="48dp"
      android:minHeight="48dp"
      android:onClick="@{(v) -> audioFragment.languageSelectionClicked()}"
      android:paddingStart="8dp"
      android:paddingTop="16dp"
      android:paddingEnd="16dp"
      android:paddingBottom="16dp"
      android:src="@drawable/ic_audio_lang_24px"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
