...
  <string name="menu_switch_profile">Switch Profile</string>
  <string name="administrator_controls">Administrator Controls</string>
  <string name="drawer_open_content_description">Navigation Menu Open</string>
  <string name="drawer_close_content_description">Navigation Menu Close</string>
  <string name="welcome_text">Welcome to Oppia!</string>
  <string name="welcome_back_text">Welcome back to Oppia!</string>
  <string name="audio_play_description">Play audio</string>
  <string name="audio_pause_description">Pause audio</string>
  <string name="audio_language_select_dialog_okay_button">OK</string>
  <string name="audio_language_select_dialog_cancel_button">Cancel</string>
  <string name="audio_language_select_dialog_title">Audio Language</string>
  <string name="audio_dialog_offline_title">Currently Offline</string>
  <string name="audio_dialog_offline_message">Make sure Wi-Fi or cellular data is turned on, then try again.</string>
  <string name="audio_dialog_offline_positive">OK</string>
  <string name="cellular_data_alert_dialog_okay_button">OK</string>
...
